Organizations are now Relations, all still working

--- a/resources/assets/less/bootstrap/forms.less
+++ b/resources/assets/less/bootstrap/forms.less
@@ -197,7 +197,7 @@ input[type="search"] {
 
 // Form groups
 //
-// Designed to help with the organization and spacing of vertical forms. For
+// Designed to help with the relation and spacing of vertical forms. For
 // horizontal forms, use the predefined grid classes.
 
 .form-group {
